exports[`no-duplicate-if-branches > invalid(1): if (isAdmin) {\n\tshowDashboard();\n\tloadStats();\n} else {\n\tshowDashboard();\n\tloadStats();\n} 1`] = `

  1 | if (isAdmin) {
  2 | 	showDashboard();
  3 | 	loadStats();
  4 | } else {
  5 | 	showDashboard();
  6 | 	loadStats();
  7 | }

`;

exports[`no-duplicate-if-branches > invalid(1): if (isAdmin) {\n\tshowDashboard();\n\tloadStats();\n} else {\n\tshowDashboard();\n\tloadStats();\n} 2`] = `

Message:
  1 | if (isAdmin) {
  2 | 	showDashboard();
  3 | 	loadStats();
> 4 | } else {
    |        ^
> 5 | 	showDashboard();
    | ^^^^^^^^^^^^^^^^^
> 6 | 	loadStats();
    | ^^^^^^^^^^^^^
> 7 | }
    | ^ This branch has the same body as the branch on line 1.

`;

exports[`no-duplicate-if-branches > invalid(10): function unicorn() {\n\tif (foo) {\n\t\treturn bar();\n\t} else {\n\t\treturn bar()\n\t}\n} 1`] = `

  1 | function unicorn() {
  2 | 	if (foo) {
  3 | 		return bar();
  4 | 	} else {
  5 | 		return bar()
  6 | 	}
  7 | }

`;

exports[`no-duplicate-if-branches > invalid(10): function unicorn() {\n\tif (foo) {\n\t\treturn bar();\n\t} else {\n\t\treturn bar()\n\t}\n} 2`] = `

Message:
  1 | function unicorn() {
  2 | 	if (foo) {
  3 | 		return bar();
> 4 | 	} else {
    | 	       ^
> 5 | 		return bar()
    | ^^^^^^^^^^^^^^
> 6 | 	}
    | ^^ This branch has the same body as the branch on line 2.
  7 | }

`;

exports[`no-duplicate-if-branches > invalid(11): function unicorn() {\n\tif (foo) {\n\t\tdo {\n\t\t\tbar();\n\t\t} while (baz);\n\t} else {\n\t\tdo {\n\t\t\tbar();\n\t\t} while (baz)\n\t}\n} 1`] = `

   1 | function unicorn() {
   2 | 	if (foo) {
   3 | 		do {
   4 | 			bar();
   5 | 		} while (baz);
   6 | 	} else {
   7 | 		do {
   8 | 			bar();
   9 | 		} while (baz)
  10 | 	}
  11 | }

`;

exports[`no-duplicate-if-branches > invalid(11): function unicorn() {\n\tif (foo) {\n\t\tdo {\n\t\t\tbar();\n\t\t} while (baz);\n\t} else {\n\t\tdo {\n\t\t\tbar();\n\t\t} while (baz)\n\t}\n} 2`] = `

Message:
   1 | function unicorn() {
   2 | 	if (foo) {
   3 | 		do {
   4 | 			bar();
   5 | 		} while (baz);
>  6 | 	} else {
     | 	       ^
>  7 | 		do {
     | ^^^^^^
>  8 | 			bar();
     | ^^^^^^^^^
>  9 | 		} while (baz)
     | ^^^^^^^^^^^^^^^
> 10 | 	}
     | ^^ This branch has the same body as the branch on line 2.
  11 | }

`;

exports[`no-duplicate-if-branches > invalid(12): if (foo) {\n\tconst bar = value as string;\n\tbaz(bar);\n} else {\n\tconst bar = value as string;\n\tbaz(bar);\n} 1`] = `

  1 | if (foo) {
  2 | 	const bar = value as string;
  3 | 	baz(bar);
  4 | } else {
  5 | 	const bar = value as string;
  6 | 	baz(bar);
  7 | }

`;

exports[`no-duplicate-if-branches > invalid(12): if (foo) {\n\tconst bar = value as string;\n\tbaz(bar);\n} else {\n\tconst bar = value as string;\n\tbaz(bar);\n} 2`] = `

Message:
  1 | if (foo) {
  2 | 	const bar = value as string;
  3 | 	baz(bar);
> 4 | } else {
    |        ^
> 5 | 	const bar = value as string;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 6 | 	baz(bar);
    | ^^^^^^^^^^
> 7 | }
    | ^ This branch has the same body as the branch on line 1.

`;

exports[`no-duplicate-if-branches > invalid(13): if (foo) {\n\tconst bar = value satisfies string;\n\tbaz(bar!);\n} else {\n\tconst bar = value satisfies string;\n\tbaz(bar!);\n} 1`] = `

  1 | if (foo) {
  2 | 	const bar = value satisfies string;
  3 | 	baz(bar!);
  4 | } else {
  5 | 	const bar = value satisfies string;
  6 | 	baz(bar!);
  7 | }

`;

exports[`no-duplicate-if-branches > invalid(13): if (foo) {\n\tconst bar = value satisfies string;\n\tbaz(bar!);\n} else {\n\tconst bar = value satisfies string;\n\tbaz(bar!);\n} 2`] = `

Message:
  1 | if (foo) {
  2 | 	const bar = value satisfies string;
  3 | 	baz(bar!);
> 4 | } else {
    |        ^
> 5 | 	const bar = value satisfies string;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 6 | 	baz(bar!);
    | ^^^^^^^^^^^
> 7 | }
    | ^ This branch has the same body as the branch on line 1.

`;

exports[`no-duplicate-if-branches > invalid(2): if (foo) {\n\tbar();\n} else if (baz) {\n\tbar();\n} 1`] = `

  1 | if (foo) {
  2 | 	bar();
  3 | } else if (baz) {
  4 | 	bar();
  5 | }

`;

exports[`no-duplicate-if-branches > invalid(2): if (foo) {\n\tbar();\n} else if (baz) {\n\tbar();\n} 2`] = `

Message:
  1 | if (foo) {
  2 | 	bar();
> 3 | } else if (baz) {
    |                 ^
> 4 | 	bar();
    | ^^^^^^^
> 5 | }
    | ^ This branch has the same body as the branch on line 1.

`;

exports[`no-duplicate-if-branches > invalid(3): if (foo) {\n\tbar();\n} else if (baz) {\n\tbar();\n} else {\n\tbar();\n} 1`] = `

  1 | if (foo) {
  2 | 	bar();
  3 | } else if (baz) {
  4 | 	bar();
  5 | } else {
  6 | 	bar();
  7 | }

`;

exports[`no-duplicate-if-branches > invalid(3): if (foo) {\n\tbar();\n} else if (baz) {\n\tbar();\n} else {\n\tbar();\n} 2`] = `

Message:
  1 | if (foo) {
  2 | 	bar();
> 3 | } else if (baz) {
    |                 ^
> 4 | 	bar();
    | ^^^^^^^
> 5 | } else {
    | ^ This branch has the same body as the branch on line 1.
  6 | 	bar();
  7 | }

`;

exports[`no-duplicate-if-branches > invalid(3): if (foo) {\n\tbar();\n} else if (baz) {\n\tbar();\n} else {\n\tbar();\n} 3`] = `

Message:
  1 | if (foo) {
  2 | 	bar();
  3 | } else if (baz) {
  4 | 	bar();
> 5 | } else {
    |        ^
> 6 | 	bar();
    | ^^^^^^^
> 7 | }
    | ^ This branch has the same body as the branch on line 3.

`;

exports[`no-duplicate-if-branches > invalid(4): if (foo) {\n\tbar();\n} else if (baz) {\n\tqux();\n} else {\n\tqux();\n} 1`] = `

  1 | if (foo) {
  2 | 	bar();
  3 | } else if (baz) {
  4 | 	qux();
  5 | } else {
  6 | 	qux();
  7 | }

`;

exports[`no-duplicate-if-branches > invalid(4): if (foo) {\n\tbar();\n} else if (baz) {\n\tqux();\n} else {\n\tqux();\n} 2`] = `

Message:
  1 | if (foo) {
  2 | 	bar();
  3 | } else if (baz) {
  4 | 	qux();
> 5 | } else {
    |        ^
> 6 | 	qux();
    | ^^^^^^^
> 7 | }
    | ^ This branch has the same body as the branch on line 3.

`;

exports[`no-duplicate-if-branches > invalid(5): function unicorn() {\n\tif (foo)\n\t\treturn bar();\n\telse\n\t\treturn bar();\n} 1`] = `

  1 | function unicorn() {
  2 | 	if (foo)
  3 | 		return bar();
  4 | 	else
  5 | 		return bar();
  6 | }

`;

exports[`no-duplicate-if-branches > invalid(5): function unicorn() {\n\tif (foo)\n\t\treturn bar();\n\telse\n\t\treturn bar();\n} 2`] = `

Message:
  1 | function unicorn() {
  2 | 	if (foo)
  3 | 		return bar();
  4 | 	else
> 5 | 		return bar();
    | 		^^^^^^^^^^^^^ This branch has the same body as the branch on line 3.
  6 | }

`;

exports[`no-duplicate-if-branches > invalid(6): if (foo)\n\tbar();\nelse {\n\tbar();\n} 1`] = `

  1 | if (foo)
  2 | 	bar();
  3 | else {
  4 | 	bar();
  5 | }

`;

exports[`no-duplicate-if-branches > invalid(6): if (foo)\n\tbar();\nelse {\n\tbar();\n} 2`] = `

Message:
  1 | if (foo)
  2 | 	bar();
> 3 | else {
    |      ^
> 4 | 	bar();
    | ^^^^^^^
> 5 | }
    | ^ This branch has the same body as the branch on line 2.

`;

exports[`no-duplicate-if-branches > invalid(7): if (foo)\n\tbar();\nelse\n\tbar() 1`] = `

  1 | if (foo)
  2 | 	bar();
  3 | else
  4 | 	bar()

`;

exports[`no-duplicate-if-branches > invalid(7): if (foo)\n\tbar();\nelse\n\tbar() 2`] = `

Message:
  1 | if (foo)
  2 | 	bar();
  3 | else
> 4 | 	bar()
    | 	^^^^^ This branch has the same body as the branch on line 2.

`;

exports[`no-duplicate-if-branches > invalid(8): if (foo) {\n\t// Comment does not make the branch different.\n\tbar();\n} else {\n\tbar();\n} 1`] = `

  1 | if (foo) {
  2 | 	// Comment does not make the branch different.
  3 | 	bar();
  4 | } else {
  5 | 	bar();
  6 | }

`;

exports[`no-duplicate-if-branches > invalid(8): if (foo) {\n\t// Comment does not make the branch different.\n\tbar();\n} else {\n\tbar();\n} 2`] = `

Message:
  1 | if (foo) {
  2 | 	// Comment does not make the branch different.
  3 | 	bar();
> 4 | } else {
    |        ^
> 5 | 	bar();
    | ^^^^^^^
> 6 | }
    | ^ This branch has the same body as the branch on line 1.

`;

exports[`no-duplicate-if-branches > invalid(9): if (foo) {\n\tbar(\n\t\tbaz\n\t);\n} else {\n\tbar(baz);\n} 1`] = `

  1 | if (foo) {
  2 | 	bar(
  3 | 		baz
  4 | 	);
  5 | } else {
  6 | 	bar(baz);
  7 | }

`;

exports[`no-duplicate-if-branches > invalid(9): if (foo) {\n\tbar(\n\t\tbaz\n\t);\n} else {\n\tbar(baz);\n} 2`] = `

Message:
  1 | if (foo) {
  2 | 	bar(
  3 | 		baz
  4 | 	);
> 5 | } else {
    |        ^
> 6 | 	bar(baz);
    | ^^^^^^^^^^
> 7 | }
    | ^ This branch has the same body as the branch on line 1.

`;
